--- a/assets/css/styless.css
+++ b/assets/css/styless.css
@@ -46,10 +46,13 @@ nav .nav-right-section img {
     width: 30px;
     height: 30px;
 }
+
+/* Main Section */
 main {
     margin-top: 150px;
     text-align: center;
 }
+/* Logo Section */
 main .main-logo {
     width: 530px;
     margin: 0 auto;
@@ -58,6 +61,8 @@ main .main-logo {
 main .main-logo img {
     width: 300px;
 }
+
+/* Search Section */
 main .main-input {
     width: 530px;
     margin: 0 auto;
@@ -101,6 +106,8 @@ main .main-input .micro-icon {
     height: 18px;
     cursor: pointer;
 }
+
+/* Buttons Section */
 main .main-buttons {
     width: 530px;
     margin: 0 auto;
@@ -123,4 +130,34 @@ main .main-buttons button:hover {
     box-shadow: 0 0 0 #000001;
     color: #222;
 
+}
+/* Footer Section */
+footer {
+    width: 100%;
+    height: 50px;
+    position: absolute; /* Put the footer always at the bottom */
+    bottom: 0; /* With this too for bottom */
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    font-size: 13px;
+    background-color: #f2f2f2;
+    border-top: 1px solid #e4e4e4;
+}
+footer ul {
+    margin: 10px;
+    list-style: none;
+    display: flex;
+    padding-left: 0;
+}
+footer .footer-left {
+    justify-content: flex-start;
+}
+footer .footer-right {
+    justify-content: flex-end;
+}
+footer ul li a {
+    margin: 10px;
+    color: #5f6368;
+    
 }
